fix photo gallery alignment

--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -11,4 +11,22 @@
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-template-rows: auto;
+    img {
+      margin-bottom: 10px;
+    }
+}
+.landscape {
+  position: relative;
+  width: calc(100% - 30px);
+  display: block;
+  float: left;
+  margin-right: 20px;
+
+}
+.portrait {
+  width: calc(50% - 20px);
+  float: left;
+  position: relative;
+  display: block;
+  margin-right: 10px;
 }
