--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -7,7 +7,7 @@
 }
 .grid-item {
   /* left and right padding */
-  padding: 40px;
+  padding: 10px;
 }
 .center-all {
   display: flex;            /* new */
