--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -1,3 +1,6 @@
 html {
   font-family: 'Work Sans', sans-serif;
+  p {
+    line-height: 1.5em;
+  }
 }
